Fix alignment

--- a/app/assets/stylesheets/api/media-queries.css
+++ b/app/assets/stylesheets/api/media-queries.css
@@ -193,7 +193,6 @@
     font-size:28px;
   }
 
-
   div.entire-item{
     transform:scale(1.5);
     margin:80px !important;
@@ -201,15 +200,6 @@
 
   div.index-right{
     /*width:400px !important;*/
-  }
-
-  .hamburger-dropdown ul, h2.explore{
-    transform:scale(1.8);
-  }
-
-  .hamburger-dropdown ul{
-    margin-top:220px !important;
-    margin-left:100px !important;
   }
 }
 
